Fix: Align action buttons on search result grid view
-set bookcover aspect ratio to .7 and overflow to hidden so that the buttons below bookcover will align horizontally
-set visibility of preview link to hidden

Closes #11907

--- a/static/css/legacy.css
+++ b/static/css/legacy.css
@@ -1439,8 +1439,12 @@ ul.list-books span.resultType {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin: 0;
+  margin-bottom: 0.5em;
+  aspect-ratio: 0.7;
+  overflow: hidden;
+  border-radius: 4px;
 }
 
 .list-books--grid .searchResultItem > .details,
@@ -1459,6 +1463,10 @@ ul.list-books span.resultType {
 .list-books--grid .searchResultItem .check-in-prompt,
 .list-books--grid .searchResultItem .star-rating-form {
   display: none;
+}
+
+.list-books--grid .searchResultItem .cta-btn.cta-btn--preview {
+  visibility: hidden;
 }
 
 .list-books--grid .list-books__note {
